--- a/src/main/config/emissary.output.DropOffPlace.cfg
+++ b/src/main/config/emissary.output.DropOffPlace.cfg
@@ -11,6 +11,7 @@ OUTPUT_DATA = "@{UNIX_ROOT}"
 # Output filters can be named with NAME:CLASS
 # The default name is the full class name if none is provided
 #OUTPUT_FILTER = "emissary.output.filter.DataFilter"
+#OUTPUT_FILTER = "KRYO:emissary.output.filter.KryoOutputFilter"
 OUTPUT_FILTER = "JSON:emissary.output.filter.JsonOutputFilter"
 #OUTPUT_FILTER = "XML:emissary.output.filter.XmlOutputFilter"
 
