--- a/pom.xml
+++ b/pom.xml
@@ -69,8 +69,8 @@
     <dep.janino.version>3.1.12</dep.janino.version>
     <dep.jaxb.runtime.version>3.0.1</dep.jaxb.runtime.version>
     <dep.jdom.version>2.0.6.1</dep.jdom.version>
-    <dep.jersey.version>3.1.3</dep.jersey.version>
-    <dep.jetty.version>11.0.24</dep.jetty.version>
+    <dep.jersey.version>3.1.9</dep.jersey.version>
+    <dep.jetty.version>12.0.14</dep.jetty.version>
     <dep.junit-jupiter.version>5.10.0</dep.junit-jupiter.version>
     <dep.logback.version>1.4.14</dep.logback.version>
     <dep.mockito.version>5.5.0</dep.mockito.version>
@@ -299,6 +299,13 @@
         <scope>import</scope>
       </dependency>
       <dependency>
+        <groupId>org.eclipse.jetty.ee10</groupId>
+        <artifactId>jetty-ee10-bom</artifactId>
+        <version>${dep.jetty.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
         <groupId>org.glassfish.jersey</groupId>
         <artifactId>jersey-bom</artifactId>
         <version>${dep.jersey.version}</version>
@@ -448,11 +455,11 @@
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
-      <artifactId>jetty-webapp</artifactId>
+      <artifactId>jetty-xml</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.eclipse.jetty</groupId>
-      <artifactId>jetty-xml</artifactId>
+      <groupId>org.eclipse.jetty.ee10</groupId>
+      <artifactId>jetty-ee10-webapp</artifactId>
     </dependency>
     <dependency>
       <groupId>org.glassfish.jaxb</groupId>
